# foucoco-standalone

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  zenlink.rs
runtime/src/weights/: mod.rs
